# filmapik-api

./: .dockerignore  .env  Cargo.toml  Dockerfile  Dockerfile.nightly  LICENSE  README-docker.md  README.md  docker-compose.nightly.yml  docker-compose.prod.yml  docker-compose.yml  run-docker.bat  run-docker.sh  swagger.yaml
src/: config.rs  errors.rs  main.rs
src/api/: cache.rs  country.rs  mod.rs  movie.rs
src/models/: mod.rs  movie.rs
src/scraper/: filmapik.rs  mod.rs
