[package]
name = "filmapik-api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.7.1"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.12.13", features = ["json"] }
scraper = "0.23.1"
select = "0.6.0"
regex = "1.9.5"
once_cell = "1.18.0"
thiserror = "2.0.12"
chrono = { version = "0.4.30", features = ["serde"] }
futures = "0.3.28"
anyhow = "1.0.75"
rand = "0.9.0"
env_logger = "0.11.7"
log = "0.4.20"
dotenv = "0.15.0"
url = "2.4.1"
tokio = { version = "1.32.0", features = ["full"] }
lazy_static = "1.4"
moka = { version = "0.12", features = ["future"] }